fix: jet selection menu not z-indexed

--- a/frontend/src/routes/index/components/SelectJet.module.scss
+++ b/frontend/src/routes/index/components/SelectJet.module.scss
@@ -4,6 +4,7 @@
   flex-direction: column;
   gap: 1.5em;
   position: fixed;
+  z-index: 2;
   width: 30em;
   padding: 2.5em;
   right: 0;
